Regression: Cycles render crash using F12 render after running script that uses bpy.ops.render #109718
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#109718
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce GTX 1080
Blender Version
Broken: 3.5.0
Broken: 3.4.0
Worked: 3.3 LTS
Caused by
21acfbe348
I have an operator in a script which automates the process of rendering sprites by rendering an image on a frame of animation in blender multiple times, once for each desired camera angle. In some (but not all) projects, after this script is run and performs its task successfully, from that point onward, if at any point you execute a regular render operation via F12, Blender will crash when the first image finishes compositing. As of yet I've been unable to identify a marker for a project which does, and one which does not have this crash.
A few extra notes:
Exact steps for others to reproduce the error
109718_ASAN.txt
Cycles render crash using F12 render after running script using bpy.ops.renderto Cycles render crash using F12 render after running script that uses bpy.ops.renderI've got error when running script.
Can you provide .crash.txt file? Can you perhaps simplify the script to be a simple procedure?
Sorry, I don't know exactly what would cause that error for you where it did not for me. Merely removing everything under the class definition PREFERENCE_PT_grpt should resolve it though, which is fine since it isn't pertinent to the test. Hopefully this is sufficient.
Here is a relevant crash log
Could be, that I am running Blender 4.0. That said, I wasn't able to reproduce this issue with 3.5 or 4.0. Tried CPU or GPU rendering.
From crash file I can imagine this may be due to outdated GPU driver, but other than that I have no idea. So please update GPU driver if possible and recheck.
I feel like I updated my drivers relatively recently, but I'll go ahead and get the absolute latest and report back.
Got the latest drivers, and I still have the same problem. I tried the CPU based render as well (with OSL off and on), and experienced the same problem I've described, so that ought to rule out GPU drivers as the primary cause.
Can confirm (even in 4.0), will check
Fine in 3.3 LTS, broken in 3.4.0
This broke between
91b88d3d94
and0ff920b777
, will bisect109718_ASAN.txt
Caused by
21acfbe348
CC @brecht
Will raise prio since this is a crash regression (even if not totally recent).
Cycles render crash using F12 render after running script that uses bpy.ops.renderto Regression: Cycles render crash using F12 render after running script that uses bpy.ops.renderBrecht Van Lommel referenced this issue2023-07-12 18:19:53 +02:00