Fix #109718: Cycles crash with persistent data and bpy.ops.render

Don't reuse freed context for subsequent render.